--- a/portfolioWeb.html
+++ b/portfolioWeb.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <head>
         <title> nikhilYates </title>
-        <link rel = "stylesheet" type = "text/css" href = "" title = "style">
+        <link rel = "stylesheet" type = "text/css" href = "portfolioStyle.css" title = "style">
         <script src = ""></script>
     </head>
     <body>
