--- a/portfolioWeb.html
+++ b/portfolioWeb.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <h1> nikhil yates </h1>
+        <p> Honours BSc. Computer Science 2024</p>
 
     </body>
 </html>
