--- a/portfolioWeb.html
+++ b/portfolioWeb.html
@@ -7,9 +7,21 @@
         <script src = ""></script>
     </head>
     <body>
-        <h1> nikhil yates </h1>
-        <p> Honours BSc. Computer Science 2024</p>
-
+        <br>
+        <br>
+        <div class="Navigation">
+            <a class = "tiger" href="#tiger">TIGER</a>
+            <a class = "linkt" href="#linkedin">LINKEDIN</a>
+            <a class = "git" href="#github">GITHUB</a>
+            <a class = "resume" href="#resume">RESUME</a>
+            
+        </div>
+        <div>
+            <h1 class = "ny"> nikhil yates </h1>
+            <p class = "edu"> Honours BSc. Computer Science 2024</p>
+        </div>
+        <br>
+        <p class = "descript">I'm goal-oriented, passionate about tech and constantly looking for different ways to integrate my creativity into problem solving. I have a wide technical skillset from working with numerous app development environments, design tools and hardware. Blockchain, embedded systems and robotics are what I'm currently focusing on, but my interests also lie in space software dev, digital mental health resources, and product design. Developing unique solutions to tackle global issues is something I look forward pursuing.</p>
     </body>
 </html>
 
