--- a/portfolioWeb.html
+++ b/portfolioWeb.html
@@ -11,9 +11,9 @@
         <br>
         <div class="Navigation">
             <a class = "tiger" href="#tiger"><img src = "ny.svg" alt = "TIGER" style="height:100px;width:100px;align-items:center;"></a>
-            <a class = "linkt" href="#linkedin">LINKEDIN</a>
+            <a class = "linkt" href="https://www.linkedin.com/in/nikhilyates/" target="_blank">LINKEDIN</a>
             <a class = "git" href="https://github.com/nikhilYates" target="_blank">GITHUB</a>
-            <a class = "resume" href="#resume">RESUME</a>
+            <a class = "resume" href="dec2022_outline.pdf" target="_blank">RESUME</a>
             
         </div>
         <div>
@@ -22,24 +22,21 @@
         </div>
         <br>
         <p class = "descript">I'm goal-oriented, passionate about tech and constantly looking for different ways to integrate my creativity into problem solving. I have a wide technical skillset from working with numerous app development environments, design tools and hardware. Blockchain, embedded systems and robotics are what I'm currently focusing on, but my interests also lie in space software dev, digital mental health resources, and product design. Developing unique solutions to tackle global issues is something I look forward pursuing.</p>
-        <br>
         <div>
             <h2 class="curricular">Extra Curriculars</h2>
-            <div class="slides">
-                <div class="mySlides">
+            <div class="row">
+                <div class="column">
                     <img src="ny.svg" style="width:50%;">
                     <div class="caption">MBAGZ-CHAIN | BLOCKCHAIN PROJECT</div>
                   </div>
-                  <div class="mySlides">
+                  <div class="column">
                     <img src="ny.svg" style="width:50%;">
                     <div class="caption">MBAGZ-CHAIN | BLOCKCHAIN PROJECT</div>
                   </div>
-                  <div class="mySlides">
+                  <div class="column">
                     <img src="ny.svg" style="width:50%;">
                     <div class="caption">MBAGZ-CHAIN | BLOCKCHAIN PROJECT</div>
                   </div>
-                  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                  <a class="next" onclick="plusSlides(1)">&#10095;</a>
             </div>
         </div>
    
