--- a/portfolioWeb.html
+++ b/portfolioWeb.html
@@ -26,19 +26,27 @@
             <h2 class="curricular">Extra Curriculars</h2>
             <div class="row">
                 <div class="column">
-                    <img src="ny.svg" style="width:50%;">
-                    <div class="caption">MBAGZ-CHAIN | BLOCKCHAIN PROJECT</div>
-                  </div>
-                  <div class="column">
-                    <img src="ny.svg" style="width:50%;">
-                    <div class="caption">MBAGZ-CHAIN | BLOCKCHAIN PROJECT</div>
-                  </div>
-                  <div class="column">
-                    <img src="ny.svg" style="width:50%;">
-                    <div class="caption">MBAGZ-CHAIN | BLOCKCHAIN PROJECT</div>
-                  </div>
+                    <img src="" class="projPic">
+                    <div class = "overlay">
+                       <div class="caption">MBAGZ-CHAIN | BLOCKCHAIN PROJECT</div>
+                    </div>
+                </div>
+                <div class="column">
+                    <img src="" class="projPic">
+                    <div class = "overlay">
+                       <div class="caption">INVENTORY MANAGEMENT | DATABASE PROJECT</div>
+                    </div>
+                </div>
+                <div class="column">
+                    <img src="ny.svg" class="projPic">
+                    <div class = "overlay">
+                       <div class="caption">MBAGZ-CHAIN | BLOCKCHAIN PROJECT</div>
+                    </div>
+                </div>
             </div>
         </div>
+        <br>
+        <p>ye thas about it</p>
    
    
     </body>
