--- a/portfolioWeb.html
+++ b/portfolioWeb.html
@@ -25,28 +25,35 @@
         <div>
             <h2 class="curricular">Extra Curriculars</h2>
             <div class="row">
+
                 <div class="column">
-                    <img src="" class="projPic">
+                    <div class="PROJNAME">CRYP
+                        TO.</div>
                     <div class = "overlay">
-                       <div class="caption">MBAGZ-CHAIN | BLOCKCHAIN PROJECT</div>
+                        <img src="nyWhite.svg" class="ovPic">
+                       <a class="caption" href="https://github.com/nikhilYates/mbagz-chain" target="_blank">MBAGZ-CHAIN | BLOCKCHAIN PROJECT</a>
                     </div>
                 </div>
                 <div class="column">
-                    <img src="" class="projPic">
+                    <div class="PROJNAME">DATA
+                        BASE.</div>
                     <div class = "overlay">
-                       <div class="caption">INVENTORY MANAGEMENT | DATABASE PROJECT</div>
+                        <img src="nyWhite.svg" class = "ovPic">
+                       <a class="caption" href="https://github.com/nikhilYates/inventoryTracker" target="_blank"> INVENTORY MANAGEMENT | DATABASE PROJECT</a>
                     </div>
                 </div>
                 <div class="column">
-                    <img src="ny.svg" class="projPic">
+                    <div class="PROJNAME">(D) SCI
+                        ENCE.
+                        </div>
                     <div class = "overlay">
-                       <div class="caption">MBAGZ-CHAIN | BLOCKCHAIN PROJECT</div>
+                        <img src="nyWhite.svg" class = "ovPic">
+                       <a class="caption" href="https://github.com/nikhilYates/inventoryTracker" target="_blank"> DATA ANALYSIS | PYTHON COURSE</a>
                     </div>
                 </div>
             </div>
         </div>
         <br>
-        <p>ye thas about it</p>
    
    
     </body>
