--- a/portfolioWeb.html
+++ b/portfolioWeb.html
@@ -11,7 +11,7 @@
         <br>
         <br>
         <div class="Navigation">
-            <a class = "tiger" href="#tiger"><img src = "ny.svg" alt = "TIGER" style="height:100px;width:100px;align-items:center;"></a>
+            <a class = "tiger" href="https://github.com/nikhilYates/portfolioDev" target="_blank"><img src = "ny.svg" alt = "TIGER" style="height:100px;width:100px;align-items:center;"></a>
             <a class = "linkt" href="https://www.linkedin.com/in/nikhilyates/" target="_blank">LINKEDIN</a>
             <a class = "git" href="https://github.com/nikhilYates" target="_blank">GITHUB</a>
             <a class = "resume" href="dec2022_outline.pdf" target="_blank">RESUME</a>
