--- a/portfolioWeb.html
+++ b/portfolioWeb.html
@@ -91,7 +91,7 @@
             <div class = "PROJNAME"> Linkedin </div>
             <div class = "overlay">
                 <img src="nyWhite.svg" class = "ovPic">
-                <a class="caption"> linkedin.com/in/nikhilyates</a>
+                <a class="caption" href="https://www.linkedin.com/in/nikhilyates/" target="_blank"> linkedin.com/in/nikhilyates</a>
                 
             </div>
         </div>
