--- a/portfolioWeb.html
+++ b/portfolioWeb.html
@@ -36,8 +36,8 @@
         <div class="row">
 
             <div class="column">
-                <div class="PROJNAME">CR.YP
-                    TO</div>
+                <div class="PROJNAME">CR.Y
+                    PTO</div>
                 <div class = "overlay">
                     <img src="nyWhite.svg" class="ovPic">
                     <a class="caption" href="https://github.com/nikhilYates/mbagz-chain" target="_blank"> MBAGZ-CHAIN <br> BLOCKCHAIN PROJECT </a>
