--- a/portfolioWeb.html
+++ b/portfolioWeb.html
@@ -40,7 +40,7 @@
                     PTO</div>
                 <div class = "overlay">
                     <img src="nyWhite.svg" class="ovPic">
-                    <a class="caption" href="https://github.com/nikhilYates/mbagz-chain" target="_blank"> MBAGZ-CHAIN <br> BLOCKCHAIN PROJECT </a>
+                    <a class="caption" href="https://github.com/nikhilYates/mbagz-chain" target="_blank"> MBAGZ-CHAIN <br> (BLOCKCHAIN PROJECT) </a>
                 </div>
             </div>
             <div class="column">
@@ -48,7 +48,7 @@
                     BASE</div>
                 <div class = "overlay">
                     <img src="nyWhite.svg" class = "ovPic">
-                    <a class="caption" href="https://github.com/nikhilYates/inventoryTracker" target="_blank"> INVENTORY MANAGEMENT <br> DATABASE PROJECT </a>
+                    <a class="caption" href="https://github.com/nikhilYates/inventoryTracker" target="_blank"> INVENTORY MANAGEMENT <br> (DATABASE PROJECT) </a>
                 </div>
             </div>
             <div class="column">
@@ -57,7 +57,28 @@
                     </div>
                 <div class = "overlay">
                     <img src="nyWhite.svg" class = "ovPic">
-                    <a class="caption" href="https://github.com/nikhilYates/dataScience" target="_blank"> DATA SCIENCE <br> PYTHON COURSE </a>
+                    <a class="caption" href="https://github.com/nikhilYates/dataScience" target="_blank"> DATA SCIENCE <br> (PYTHON COURSE) </a>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="column">
+                <div class = "PROJNAME">MCU.M
+                    OTOR
+                </div>
+                <div class = "overlay">
+                    <img src="nyWhite.svg" class = "ovPic">
+                    <a class="caption" href="https://github.com/nikhilYates/dataScience" target="_blank"> MCU MOTOR <br> (EMBEDDED SYSTEMS) </a>
+                </div>
+            </div>
+            <div class="column">
+                <div class = "PROJNAME">MCU.M
+                    OTOR
+                </div>
+                <div class = "overlay">
+                    <img src="nyWhite.svg" class = "ovPic">
+                    <a class="caption" href="https://github.com/nikhilYates/dataScience" target="_blank"> MCU MOTOR <br> (EMBEDDED SYSTEMS) </a>
                 </div>
             </div>
         </div>
@@ -71,6 +92,9 @@
         <p class="descript"> This initiative was lead by York University in partnership with the Canadian Space Agency. I produced solutions for tasks handled by the <span class="courier"> satellite's onboard computer </span> and contributed to the <span class="courier"> (Test Readiness Report) </span> by justifying the use of a watchdog function that mitigates issues stemming from unplanned satellite movement.
         <p class="descript"> I worked extensively with<span class="courier"> Powershell, Ubuntu, Microchip Studio, </span> and wrote programs in <span class="courier"> C. </span></p>   
         </p>
+        <br>
+        <p class = "edu">Private Equity Analyst - Define Capital Inc. (2023 - )</p>
+        <p class = "descript">I conduct research for target acquisitions in tech markets. Alongside building target lists using data analysis, financial modelling, and financial analysis for companies of interest, I prepare and review acquisition documentation.</p>
         <a class="return" href="#top">return;</a>
         <h2 class="curricular">}</h2>
         
@@ -121,7 +145,7 @@
             });
             
         </script>  -->
-    <footer>NIKHIL YATES - 2022</footer>
+    <footer>NIKHIL YATES 2023</footer>
     </body>
 </div>
 </html>
