--- a/portfolioWeb.html
+++ b/portfolioWeb.html
@@ -17,7 +17,7 @@
                 <br>
                 <br>
                 <div id="Navigation" style="background-color: black;">
-                    <a class = "tiger" href="portfolioWeb.html"><img src = "ny.svg" alt = "TIGER" style="height:125px;width:125px;align-items:left;"></a>
+                    <a class = "tiger" href="https://github.com/nikhilYates/portfolioDev" target="_blank"><img src = "ny.svg" alt = "TIGER" style="height:125px;width:125px;align-items:left;"></a>
                     <a class = "linkt" href="#contact">CONTACT</a>
                     <a class = "resume" href="nikhilyates.pdf" target="_blank">RESUME</a>
                     <a class = "git" href="#about">ABOUT</a>
