--- a/portfolioWeb.html
+++ b/portfolioWeb.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
     <html>
-    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
     <head>
         <title> nikhilYates </title>
         <link rel = "stylesheet" type = "text/css" href = "portfolioStyle.css" title = "style">
