final mobile changes

--- a/portfolioWeb.html
+++ b/portfolioWeb.html
@@ -267,7 +267,7 @@
                         </div>
                         <br>
                         <br>
-                        <div class="PROJNAME">MATRIX COLLECTIVE launch FALL 2023</div>
+                        <div class="PROJNAMEend">MATRIX COLLECTIVE launch FALL 2023</div>
                         <br>
                         <br>
                         <br>
