edits to the signature in header (moved it back z-index) and improving the desktio nav menu

--- a/portfolioWeb.html
+++ b/portfolioWeb.html
@@ -29,7 +29,7 @@
                             <li><a class = "resume" href="#work">WORK</a></li>
                             <li><a class = "git" href="#about">ABOUT</a></li>
                             <li><a class = "linkt" href="#contact">CONTACT</a></li>
-                            <li><a class="matrix" href="#contact">matrix</a></li>
+                            <li><a class="matrix" href="#contact">scorpionLabz</a></li>
                             <li><a class = "tiger" href="#top"><img src = "ny.svg" alt = "TIGER" style="height:125px;width:125px;align-items:left;"></a></li>
                             <br>
                             <br>
@@ -58,7 +58,7 @@
                                     <!-- <li><a class = "tiger" href="javascript:window.location.href=window.location.href"><img src = "nyWhite.svg" alt = "TIGER" style="height:125px;width:125px;align-items:left;"></a></li> -->
                                     <div class="mainCol"><a class = "resume" href="#work">WORK</a></div>
                                     <div class="mainCol"><a class = "git" href="#about">ABOUT</a></div>
-                                    <div class="mainCol"><a class= "matrix" href="#contact">matrix</a></div>
+                                    <div class="mainCol"><a class= "matrix" href="#contact">scorpionLabz</a></div>
                                     <div class="mainCol"><a class = "linkt" href="#contact">CONTACT</a></div>
                                 
                             </div>
@@ -226,7 +226,8 @@
                                     <h3 class="resume-header">workExperience[][] <span class="resumeBrackets"> = {</span></h3>
                                         <h3 class="resume-info">{Omira Group, IT Consultant, (2021-2023)},</h3>
                                         <h3 class="resume-info">{ESSENCE CubeSat Mission, Software Developer, (2021-2022)},</h3>
-                                        <h3 class="resume-info-curr">{Define Capital Inc., Private Equity Analyst, (2023-)}</h3>
+                                        <h3 class="resume-info">{Define Capital Inc., Private Equity Analyst, (2023-)},</h3>
+                                        <h3 class="resume-info-curr">{ScorpionLabz, CEO, (2023-Present)</h3>
                                     <h3 class="resumeBr">};</h3>
 
                                     <h3 class="resume-header">skillSet[][] <span class="resumeBrackets"> = {</span></h3>
@@ -267,7 +268,7 @@
                         </div>
                         <br>
                         <br>
-                        <div class="PROJNAMEend">MATRIX COLLECTIVE launch FALL 2023</div>
+                        <div class="PROJNAMEend">SCORPIONLABZ LAUNCH FALL 2023</div>
                         <br>
                         <br>
                         <br>
