remove sensitive data

--- a/scorpion.html
+++ b/scorpion.html
@@ -18,7 +18,7 @@
         <br>
         <h3 class="menuLabel">WE ARE DESIGN VARIANT AND
         QUALITY OBSESSED. WE'LL HELP YOU MAKE YOUR NEXT
-        IDEA BECOME YOUR BEST IDEA. STAY TUNED . . .
+        IDEA BECOME YOUR BEST
 
         </h3>
 <!--        <h3 class="menuLabel">INFO@SCORPIONLABZ.COM</h3>-->
@@ -27,25 +27,25 @@
       </div>
 
     </div>
-    <div class="menuArea">
-      <h3 class="menuLabel">COMING SOON</h3>
-      <h3 class="menuLabel">COMING SOON</h3>
-      <h3 class="menuLabel">COMING SOON</h3>
-      <h3 class="menuLabel">COMING SOON</h3>
-      <h3 class="menuLabel">COMING SOON</h3>
-      <h3 class="menuLabel">COMING SOON</h3>
-      <h3 class="menuLabel">COMING SOON</h3>
-      <h3 class="menuLabel">COMING SOON</h3>
-      <h3 class="menuLabel">COMING SOON</h3>
-      <h3 class="menuLabel">COMING SOON</h3>
-      <h3 class="menuLabel">COMING SOON</h3>
-      <h3 class="menuLabel">COMING SOON</h3>
-      <h3 class="menuLabel">COMING SOON</h3>
-      <h3 class="menuLabel">COMING SOON</h3>
-      <h3 class="menuLabelVERT">COMING SOON</h3>
-      <br>
+<!--    <div class="menuArea">-->
+<!--      <h3 class="menuLabel">COMING SOON</h3>-->
+<!--      <h3 class="menuLabel">COMING SOON</h3>-->
+<!--      <h3 class="menuLabel">COMING SOON</h3>-->
+<!--      <h3 class="menuLabel">COMING SOON</h3>-->
+<!--      <h3 class="menuLabel">COMING SOON</h3>-->
+<!--      <h3 class="menuLabel">COMING SOON</h3>-->
+<!--      <h3 class="menuLabel">COMING SOON</h3>-->
+<!--      <h3 class="menuLabel">COMING SOON</h3>-->
+<!--      <h3 class="menuLabel">COMING SOON</h3>-->
+<!--      <h3 class="menuLabel">COMING SOON</h3>-->
+<!--      <h3 class="menuLabel">COMING SOON</h3>-->
+<!--      <h3 class="menuLabel">COMING SOON</h3>-->
+<!--      <h3 class="menuLabel">COMING SOON</h3>-->
+<!--      <h3 class="menuLabel">COMING SOON</h3>-->
+<!--      <h3 class="menuLabelVERT">COMING SOON</h3>-->
+<!--      <br>-->
 
-    </div>
+<!--    </div>-->
     <div class="mainArea">
       <div class="gridCont">
         <div class="grid1 boxChange"></div>
