--- a/scorpion.html
+++ b/scorpion.html
@@ -19,33 +19,25 @@
         <h3 class="menuLabel">WE ARE DESIGN VARIANT AND
         QUALITY OBSESSED. WE'LL HELP YOU MAKE YOUR NEXT
         IDEA BECOME YOUR BEST
-
         </h3>
-<!--        <h3 class="menuLabel">INFO@SCORPIONLABZ.COM</h3>-->
+
 <!--        <h3 class="menuLabel">647 679 2497</h3>-->
 
       </div>
+      <div class="emailArea">
+        <h3 class="menuLabeleh">INFO:
+          <span class="email">NIKHIL.YATES@OUTLOOK.COM</span>
+        </h3>
+      </div>
 
     </div>
-<!--    <div class="menuArea">-->
-<!--      <h3 class="menuLabel">COMING SOON</h3>-->
-<!--      <h3 class="menuLabel">COMING SOON</h3>-->
-<!--      <h3 class="menuLabel">COMING SOON</h3>-->
-<!--      <h3 class="menuLabel">COMING SOON</h3>-->
-<!--      <h3 class="menuLabel">COMING SOON</h3>-->
-<!--      <h3 class="menuLabel">COMING SOON</h3>-->
-<!--      <h3 class="menuLabel">COMING SOON</h3>-->
-<!--      <h3 class="menuLabel">COMING SOON</h3>-->
-<!--      <h3 class="menuLabel">COMING SOON</h3>-->
-<!--      <h3 class="menuLabel">COMING SOON</h3>-->
-<!--      <h3 class="menuLabel">COMING SOON</h3>-->
-<!--      <h3 class="menuLabel">COMING SOON</h3>-->
-<!--      <h3 class="menuLabel">COMING SOON</h3>-->
-<!--      <h3 class="menuLabel">COMING SOON</h3>-->
-<!--      <h3 class="menuLabelVERT">COMING SOON</h3>-->
-<!--      <br>-->
+    <div class="menuArea">
+      <h3 class="menuLabelVERT">COMING SOON</h3>
 
-<!--    </div>-->
+
+      <h4 class="infoFooter">2023 - SCORPIONLABZ ©</h4>
+
+    </div>
     <div class="mainArea">
       <div class="gridCont">
         <div class="grid1 boxChange"></div>
@@ -153,6 +145,7 @@
     </div>
     </div>
   </div>
+
 
 
 </body>
