--- a/portfolioWeb.html
+++ b/portfolioWeb.html
@@ -363,9 +363,9 @@
                     <br>
                     <div class="robotics-info">
                         <div class="robotics-info-left">
-                            <h1 style="font-size:60px"><b>Plan. Implement. Build.</b></h1>
-                            <p style="font-size: 50px">RRT-based algorithm for a path finding robot. Algorithm design and implementation was done in 48 hours with the 
-                                <span style="color:rgb(36, 204, 39)">Adit Jain</span>. Check out our video demonstration for the actual implementation in Gazebo.</p> 
+                            <h1 style="font-size:4em"><b>Plan. Implement. Build.</b></h1>
+                            <p style="font-size:2.5em">RRT-based algorithm for a path finding robot. Algorithm design and implementation was done in 48 hours with
+                        <span><a href="https://github.com/AditJainn" class="inline-adit" target="_blank">AditJainn</a></span>. Check out our video demonstration for the actual implementation in Gazebo.</p> 
                         </div>
                         <div class="robotics-info-right">
                             <video class="rrt-video" autoplay loop muted="muted" volume="0">
@@ -379,8 +379,8 @@
                 <br>
                 <div class="robotics-info">
                     <div class="robotics-info-left">
-                        <h1 style="font-size:60px"><b>Precision x Accuracy</b></h1>
-                        <p style="font-size:50px">Manipulating the Kinova Gen3 lite robot. Wrote my own software to control 6 actuators and simulate a sorting process. Focused on cartesian and angular movements across
+                        <h1 style="font-size:4em"><b>Precision x Accuracy</b></h1>
+                        <p style="font-size:2.5em">Manipulating the Kinova Gen3 lite robot. Wrote my own software to control 6 actuators and simulate a sorting process. Focused on cartesian and angular movements across
                         the 3D space.</p>
                     </div>
                     <div class="robotics-info-right">
@@ -394,8 +394,8 @@
                 <br>
                 <div class="robotics-info">
                     <div class="robotics-info-left">
-                        <h1 style="font-size:60px"><b>Eat, Sleep, Train, Repeat</b></h1>
-                        <p style="font-size:50px">Using the TensorFlow library, succesfully trained a neural network and used it to produce a line-following robot. Experimented with connection drop-out, changing the number of hidden levels, etc. </p>
+                        <h1 style="font-size:4em"><b>Eat, Sleep, Train, Repeat</b></h1>
+                        <p style="font-size:2.5em">Using the TensorFlow library, succesfully trained a neural network and used it to produce a line-following robot. Experimented with connection drop-out, changing the number of hidden levels, etc. </p>
                     </div>
                     <div class="robotics-info-right">
                         <video class="nn-follower-video" autoplay loop muted="muted" volume="0">
