styling updates for phone

--- a/portfolioWeb.html
+++ b/portfolioWeb.html
@@ -18,7 +18,7 @@
             <div class="scrollArea">
                 <div class="vid-container">
                     <video autoplay muted loop playsinline>
-                        <source src="starry.mov" type="video/mp4">
+                        <source class="lines-video" src="starry.mov" type="video/mp4">
                     </video>
                 </div>
                 <div>
@@ -432,7 +432,7 @@
                                 <h3 class="resume-info">{Omira Group, IT Consultant, (2021-2023)},</h3>
                                 <h3 class="resume-info">{ESSENCE CubeSat Mission, Software Developer, (2021-2022)},</h3>
                                 <h3 class="resume-info">{Define Capital Inc., Private Equity Analyst, (2023-)},</h3>
-                                <h3 class="resume-info-curr">{ScorpionLabz, CEO, (2023-Present)</h3>
+                                <h3 class="resume-info-curr">{ScorpionLabz, CEO, (2023-Present)}</h3>
                             <h3 class="resumeBr">};</h3>
 
                             <h3 class="resume-header">skillSet[][] <span class="resumeBrackets"> = {</span></h3>
